Remove unnecasary from CurrencyMapper, Add @Builder to Currency, Change getAllCurrencies in CurrencyService