@@ -1,14 +1,11 @@
 package com.example.exchange.service;
 
 import com.example.exchange.dto.CurrencyDto;
-import com.example.exchange.entity.Currency;
 import com.example.exchange.mapper.CurrencyMapper;
 import com.example.exchange.repository.CurrencyRepository;
+import java.util.List;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -19,9 +16,8 @@ public class CurrencyService {
 
 
     public List<CurrencyDto> getAllCurrencies() {
-        List<Currency> currencies = currencyRepository.findAll();
-        return currencies.stream()
+        return currencyRepository.findAll().stream()
                 .map(currencyMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
